# routes/tasks.js
@@ -5,9 +5,10 @@ const taskController = require("../controllers/tasks");
 
 // // Define routes for task-related operations
 router.get("/", taskController.getAllTasks);
-// router.get("/tasks/:id", taskController.getTaskById);
-// router.post("/tasks", taskController.createTask);
-// router.put("/tasks/:id", taskController.updateTask);
-// router.delete("/tasks/:id", taskController.deleteTask);
+router.get("/:id", taskController.getTaskById);
+router.get("/user/:userId/tasks", taskController.getTasksByUserId); // get tasks by user ID
+router.post("/", taskController.createTask);
+router.put("/:id", taskController.updateTask);
+router.delete("/:id", taskController.deleteTask);
 
 module.exports = router;
